# The_Threshing_Floor

./: .env.example  .gitignore  .gitpod.yml  CLAUDE.md  README.md  package.json  project_spec.json  pyproject.toml  requirements.txt  wrangler.toml
.claude/hooks/: session-start.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/models/: database.py  schemas.py  tables.py
app/routes/: api.py  pages.py
app/services/: analyzer.py  cache.py  collector.py  exporter.py  reddit_client.py  web_scraper.py
app/static/css/: thresh.css
app/static/js/: charts.js  export.js  thresh.js  winnow.js
app/templates/: base.html
app/templates/pages/: about.html  explore.html  floor.html  glean.html  harvest.html  thresh.html  winnow.html
app/templates/partials/: collection_form.html  comment_tree.html  dashboard_recent_exports.html  dashboard_recent_jobs.html  error_message.html  export_list.html  export_preview.html  export_result.html  harvest_job_options.html  harvest_table.html  job_card.html  job_progress.html  post_cards.html  provenance_badge.html  recent_jobs.html  (+5 more)
docs/: index.html
docs/css/: thresh.css
docs/js/: app.js  export.js  reddit.js  storage.js
functions/api/: claude.js  reddit.js
public/: _headers  index.html
public/css/: thresh.css
public/js/: app.js  claude.js  exporter.js  reddit.js
tests/: conftest.py  test_reddit_client.py  test_web_scraper.py
tests/fixtures/: reddit_responses.py
thresh-proxy/: SETUP.md  package.json  wrangler.toml
thresh-proxy/src/: index.js
