[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thresh"
version = "0.1.0"
description = "The Threshing Floor — separate the wheat from the feed"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Jacob E. Thomas"}]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.25.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "nltk>=3.8.0",
]

[project.optional-dependencies]
reddit-api = [
    "praw>=7.7.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "praw>=7.7.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
